--- a/fr/preamble.html
+++ b/fr/preamble.html
@@ -1,11 +1,11 @@
 <div id="linklist">
   <ul>
     <li><a href="http://orgmode.org/fr/index.html">Accueil</a></li>
-    <li><a href="http://orgmode.org/fr/org-mode-download.html">Télécharger</a></li>
+    <li><a href="http://orgmode.org/fr/org-mode-telecharger.html">Télécharger</a></li>
     <li><a href="http://orgmode.org/fr/org-mode-documentation.html">Documentation</a></li>
     <li><a href="http://orgmode.org/fr/org-mode-support.html">Communité</a></li>
-    <li><a href="http://orgmode.org/fr/org-mode-news.html">Nouvelles</a></li>
-    <li><a href="http://orgmode.org/fr/org-mode-links.html">Plus</a></li>
+    <li><a href="http://orgmode.org/fr/org-mode-nouvelles.html">Nouvelles</a></li>
+    <li><a href="http://orgmode.org/fr/org-mode-plus.html">Plus</a></li>
   </ul>
 </div>
 
