Correct location for quotes.

--- a/fr/preamble.html
+++ b/fr/preamble.html
@@ -43,7 +43,7 @@
 </div>
 
 <div id="orgquote">
-  <script type="text/javascript" src="org-quote.js"></script>
+  <script type="text/javascript" src="http://orgmode.org/org-quote.js"></script>
 </div>
 
 <div id="paypal">
