--- a/fr/preamble.html
+++ b/fr/preamble.html
@@ -3,7 +3,7 @@
     <li><a href="http://orgmode.org/fr/index.html">Accueil</a></li>
     <li><a href="http://orgmode.org/fr/org-mode-telecharger.html">Télécharger</a></li>
     <li><a href="http://orgmode.org/fr/org-mode-documentation.html">Documentation</a></li>
-    <li><a href="http://orgmode.org/fr/org-mode-support.html">Communité</a></li>
+    <li><a href="http://orgmode.org/fr/org-mode-support.html">Communauté</a></li>
     <li><a href="http://orgmode.org/fr/org-mode-nouvelles.html">Nouvelles</a></li>
     <li><a href="http://orgmode.org/fr/org-mode-plus.html">Plus</a></li>
   </ul>
