--- a/fr/preamble.html
+++ b/fr/preamble.html
@@ -47,14 +47,6 @@
 </div>
 
 <div id="paypal">
-  <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post"> 
-    <input type="hidden" name="cmd" value="_xclick" /> 
-    <input type="hidden" name="business" value="bastien1@free.fr" /> 
-    <input type="hidden" name="item_name" value="Maintainance d'Org-mode (Emacs)" /> 
-    <input type="hidden" name="item_number" value="1" /> 
-    <input type="hidden" name="lc" value="FR" /> 
-    <input type="hidden" name="currency_code" value="EUR" /> 
-    <input type="hidden" name="tax" value="0" /> 
-    <button name="submit" alt="Faire un paiement avec PayPal" />Soutenir!</button>
-  </form>
+  <a href="http://orgmode.org/fr/org-mode-soutenir.html" title="Faire un don">Soutenir !</a>
 </div>
+
