[ja] Fix favicon display

--- a/ja/preamble.html
+++ b/ja/preamble.html
@@ -47,14 +47,5 @@
 </div>
 
 <div id="paypal">
-  <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post"> 
-    <input type="hidden" name="cmd" value="_xclick" /> 
-    <input type="hidden" name="business" value="bastien1@free.fr" /> 
-    <input type="hidden" name="item_name" value="Emacs Org-mode maintainance" /> 
-    <input type="hidden" name="item_number" value="1" /> 
-    <input type="hidden" name="lc" value="US" /> 
-    <input type="hidden" name="currency_code" value="USD" /> 
-    <input type="hidden" name="tax" value="0" /> 
-    <button name="submit" alt="Make payments with PayPal" />Support!</button>
-  </form>
+  <a href="http://orgmode.org/org-mode-donate.html" title="Make a donation">支援する！</a>
 </div>
