[ja] Fix a link

--- a/ja/preamble.html
+++ b/ja/preamble.html
@@ -47,5 +47,5 @@
 </div>
 
 <div id="paypal">
-  <a href="http://orgmode.org/org-mode-donate.html" title="Make a donation">支援する！</a>
+  <a href="http://orgmode.org/ja/org-mode-donate.html" title="Make a donation">支援する！</a>
 </div>
