Revert "Add link to the G+ page of Org mode."
This reverts commit e760d111dfd7ca54ea726d10611e5e0a8e53561e.

--- a/postamble.html
+++ b/postamble.html
@@ -20,6 +20,8 @@
       {lang: 'en'}
     </script>
 
+    <g:plusone count="false"></g:plusone>
+
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -31,12 +33,6 @@
 
     <div class="fb-like" data-href="http://orgmode.org" data-send="false"
 	 data-layout="button_count" data-width="450" data-show-faces="true"></div>
-
-    <!-- Placez cette balise dans l'en-tête <head> de votre document -->
-    <link href="https://plus.google.com/102778904320752967064" rel="publisher" />
-
-    <!-- Placez cette balise à l'endroit où vous souhaitez voir le badge s'afficher -->
-    <a href="https://plus.google.com/102778904320752967064?prsrc=3" style="cursor:pointer;display:inline-block;text-decoration:none;color:#333;font:13px/16px arial,sans-serif;"><span style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;">Org mode</span><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" alt="" style="border:0;width:16px;height:16px;"/></a>
     
   </div>
 </div>
