--- a/es/preamble.html
+++ b/es/preamble.html
@@ -1,11 +1,11 @@
 <div id="linklist">
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="org-mode-download.html">Download</a></li>
-    <li><a href="org-mode-documentation.html">Documentation</a></li>
-    <li><a href="org-mode-support.html">Community</a></li>
-    <li><a href="org-mode-news.html">News</a></li>
-    <li><a href="org-mode-links.html">More</a></li>
+    <li><a href="index.html">Página principal</a></li>
+    <li><a href="org-mode-download.html">Descargar</a></li>
+    <li><a href="org-mode-documentation.html">Documentación</a></li>
+    <li><a href="org-mode-support.html">Comunidad</a></li>
+    <li><a href="org-mode-news.html">Noticias</a></li>
+    <li><a href="org-mode-links.html">Más</a></li>
   </ul>
 </div>
 
