es/preamble.html: correct menu links to point to Spanish version

--- a/es/preamble.html
+++ b/es/preamble.html
@@ -1,11 +1,11 @@
 <div id="linklist">
   <ul>
-    <li><a href="index.html">Página principal</a></li>
-    <li><a href="org-mode-download.html">Descargar</a></li>
-    <li><a href="org-mode-documentation.html">Documentación</a></li>
-    <li><a href="org-mode-support.html">Comunidad</a></li>
-    <li><a href="org-mode-news.html">Noticias</a></li>
-    <li><a href="org-mode-links.html">Más</a></li>
+    <li><a href="http://orgmode.org/es/index.html">Página principal</a></li>
+    <li><a href="http://orgmode.org/es/org-mode-download.html">Descargar</a></li>
+    <li><a href="http://orgmode.org/es/org-mode-documentation.html">Documentación</a></li>
+    <li><a href="http://orgmode.org/es/org-mode-support.html">Comunidad</a></li>
+    <li><a href="http://orgmode.org/es/org-mode-news.html">Noticias</a></li>
+    <li><a href="http://orgmode.org/es/org-mode-links.html">Más</a></li>
   </ul>
 </div>
 
@@ -47,5 +47,5 @@
 </div>
 
 <div id="paypal">
-  <a href="http://orgmode.org/org-mode-donate.html" title="Make a donation">Support!</a>
+  <a href="http://orgmode.org/es/org-mode-donate.html" title="Make a donation">Support!</a>
 </div>
