Add a license for the content and the code.

--- a/postamble.html
+++ b/postamble.html
@@ -33,6 +33,9 @@
 
     <div class="fb-like" data-href="http://orgmode.org" data-send="false"
 	 data-layout="button_count" data-width="450" data-show-faces="true"></div>
-    
+
   </div>
+
+  <p font-size="20%">Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
+
 </div>
