Remove font-size for the copyright notice in postamble.

--- a/postamble.html
+++ b/postamble.html
@@ -36,6 +36,6 @@
 
   </div>
 
-  <p font-size="20%">Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
+  <p>Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
 
 </div>
