Use small for the copyright notice.

--- a/postamble.html
+++ b/postamble.html
@@ -10,7 +10,7 @@
         s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
         t.parentNode.insertBefore(s, t);
     })();
-/* ]]> */
+    /* ]]> */
     </script> 
 
     <a class="FlattrButton" style="display:none;"
@@ -36,6 +36,6 @@
 
   </div>
 
-  <p>Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
+  <p font-size=".3pt">Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
 
 </div>
