--- a/postamble.html
+++ b/postamble.html
@@ -36,6 +36,6 @@
 
   </div>
 
-  <p font-size=".3em">Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
+  <p class="copyright">Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
 
 </div>
