Use span instead of p in postamble.

--- a/postamble.html
+++ b/postamble.html
@@ -36,6 +36,7 @@
 
   </div>
 
-  <p class="copyright">Text and code available under GPLv3 and GNU FDLv1.3 and later.</p>
+  <span class="copyright">Text/code available under GPLv3 and GNU
+  FDLv1.3</span>
 
 </div>
