es: Translate 'support' in preamble

--- a/es/preamble.html
+++ b/es/preamble.html
@@ -47,5 +47,5 @@
 </div>
 
 <div id="paypal">
-  <a href="http://orgmode.org/es/org-mode-donate.html" title="Make a donation">Support!</a>
+  <a href="http://orgmode.org/es/org-mode-donate.html" title="Make a donation">Apóyanos!</a>
 </div>
