--- a/postamble.html
+++ b/postamble.html
@@ -1,4 +1,5 @@
 <div id="buttons">
+
   <div class="ok">
     
     <script type="text/javascript"> 
@@ -35,6 +36,8 @@
 	 data-layout="button_count" data-width="450" data-show-faces="true"></div>
 
   </div>
+
+  <script type="text/javascript" src="http://www.ohloh.net/p/506291/widgets/project_users_logo.js"></script>
 
   <span class="copyright">Text/code available under GPLv3 and GNU
   FDLv1.3</span>
