Use "Org mode" instead of "Org-mode" and "Org-Mode".
This is to be consistent with the standards as described
in doc/Documentation_Standards.org.

--- a/es/preamble.html
+++ b/es/preamble.html
@@ -17,7 +17,7 @@
     type: 'search',
     search: '#orgmode',
     interval: 30000,
-    title: 'Mentions of Org-mode',
+    title: 'Mentions of Org mode',
     subject: '#orgmode',
     width: 180,
     height: 140,
