--- a/preamble.html
+++ b/preamble.html
@@ -17,7 +17,7 @@
     type: 'search',
     search: '#orgmode',
     interval: 30000,
-    title: 'Mentions of Org-mode',
+    title: 'Mentions of Org mode',
     subject: '#orgmode',
     width: 180,
     height: 140,
