Add links to translation

--- a/preamble.html
+++ b/preamble.html
@@ -3,6 +3,13 @@
 <script type="text/javascript" src="http://orgmode.org/js/org.js"></script>
 <a title="Back to http://orgmode.org" href="http://orgmode.org"><img id="logo" src="http://orgmode.org/img/org-mode-unicorn-logo.png" /></a>
 
+<div id="translate">
+[ <a title="English version" href="http://orgmode.org/index.html">en</a>
+· <a title="Version française"
+href="http://orgmode.org/fr/index.html">fr</a> · <a title="Japanese
+version" href="http://orgmode.org/ja/index.html">ja</a> ]
+</div>
+
 <div id="orgquote">
   <script type="text/javascript" src="http://orgmode.org/org-quotes.js"></script>
 </div>
