--- a/preamble.html
+++ b/preamble.html
@@ -5,8 +5,8 @@
 
 <div id="translate">
 [ <a title="English version" href="http://orgmode.org/index.html">en</a>
-· <a title="Version française"
-href="http://orgmode.org/fr/index.html">fr</a> · <a title="Japanese
+- <a title="Version française"
+href="http://orgmode.org/fr/index.html">fr</a> - <a title="Japanese
 version" href="http://orgmode.org/ja/index.html">ja</a> ]
 </div>
 
