--- a/preamble.html
+++ b/preamble.html
@@ -14,6 +14,18 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
   <script type="text/javascript" src="http://orgmode.org/org-quotes.js"></script>
 </div>
 
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-7691209-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+
 <div id="buttons">
 
   <script type="text/javascript"> 
