--- a/preamble.html
+++ b/preamble.html
@@ -53,7 +53,7 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
     <input type="hidden" name="business" value="bastien1@free.fr" />
     <input type="hidden" name="item_name" value="Org mode (Emacs)" />
     <input type="hidden" name="item_number" value="1" />
-    <input type="hidden" name="lc" value="EN" />
+    <input type="hidden" name="lc" value="US" />
     <input type="hidden" name="currency_code" value="USD" />
     <input type="hidden" name="tax" value="0" />
     <button name="submit" alt="Support Org-mode" />Donate</button>
