--- a/preamble.html
+++ b/preamble.html
@@ -1,7 +1,7 @@
 <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://orgmode.org/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="http://orgmode.org/js/org.js"></script>
-<a title="Back to http://orgmode.org" href="http://orgmode.org"><img id="logo" src="http://orgmode.org/img/org-mode-unicorn-logo.png" /></a>
+<a title="Back to http://orgmode.org" href="http://orgmode.org"><img id="logo" src="http://orgmode.org/img/worg-unicorn2.png" /></a>
 
 <div id="translate">
 [ <a title="English version" href="http://orgmode.org/index.html">en</a>
