--- a/preamble.html
+++ b/preamble.html
@@ -50,7 +50,7 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
 
   <form id="paypal" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_xclick" />
-    <input type="hidden" name="business" value="bastien1@free.fr" />
+    <input type="hidden" name="business" value="carsten.dominik@gmail.com" />
     <input type="hidden" name="item_name" value="Org mode (Emacs)" />
     <input type="hidden" name="item_number" value="1" />
     <input type="hidden" name="lc" value="GB" />
