Test displaying Rackspace logo on the top right

--- a/preamble.html
+++ b/preamble.html
@@ -28,6 +28,8 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
 
 <div id="buttons">
 
+  <img id="rackspace" src="img/rackspace2.jpg"/>
+
   <form id="paypal" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_xclick" />
     <input type="hidden" name="business" value="carsten.dominik@gmail.com" />
