Add a link to rackspace

--- a/preamble.html
+++ b/preamble.html
@@ -28,7 +28,7 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
 
 <div id="buttons">
 
-  <img id="rackspace" src="img/rackspace2.jpg"/>
+  <a target="new" href="http://www.rackspace.com"><img id="rackspace" src="img/rackspace2.jpg"/></a>
 
   <form id="paypal" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_xclick" />
