Shorten the submit button message for donations

--- a/preamble.html
+++ b/preamble.html
@@ -39,7 +39,7 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
     <input type="hidden" name="currency_code" value="USD" />
     <input type="hidden" name="tax" value="0" />
     <input type="hidden" name="return" value="http://orgmode.org" />
-    <button name="submit" alt="Support Org-mode" />Support Org maintainer</button>
+    <button name="submit" alt="Support Org-mode" />Support Org</button>
 </form>
 
 </div>
