--- a/preamble.html
+++ b/preamble.html
@@ -4,10 +4,10 @@
 <a title="Back to http://orgmode.org" href="http://orgmode.org"><img id="logo" src="http://orgmode.org/img/org-mode-unicorn-logo.png" /></a>
 
 <div id="translate">
-[ <a title="English version" href="http://orgmode.org/index.html">en</a>
-- <a title="Version française"
-href="http://orgmode.org/fr/index.html">fr</a> - <a title="Japanese
-version" href="http://orgmode.org/ja/index.html">ja</a> ]
+  [ <a title="English version" href="http://orgmode.org/index.html">en</a>
+  - <a title="Version française"
+       href="http://orgmode.org/fr/index.html">fr</a> - <a title="Japanese
+								  version" href="http://orgmode.org/ja/index.html">ja</a> ]
 </div>
 
 <div id="orgquote">
@@ -20,15 +20,15 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
   _gaq.push(['_trackPageview']);
 
   (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
 
 <div id="buttons">
 
-  <a target="new" href="http://www.rackspace.com"><img id="rackspace" src="img/rackspace2.jpg"/></a>
+  <a target="new" href="http://www.rackspace.com"><img id="rackspace" src="/img/rackspace2.jpg"/></a>
 
   <form id="paypal" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_xclick" />
@@ -40,6 +40,6 @@ version" href="http://orgmode.org/ja/index.html">ja</a> ]
     <input type="hidden" name="tax" value="0" />
     <input type="hidden" name="return" value="http://orgmode.org" />
     <button name="submit" alt="Support Org-mode" />Support Org</button>
-</form>
+  </form>
 
 </div>
