Fix http references and remove Rackspace ad

--- a/preamble.html
+++ b/preamble.html
@@ -1,17 +1,16 @@
 <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="http://orgmode.org/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="http://orgmode.org/js/org.js"></script>
-<a title="Back to http://orgmode.org" href="http://orgmode.org"><img id="logo" src="http://orgmode.org/img/org-mode-unicorn-logo.png" /></a>
+<script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/js/org.js"></script>
+<a title="Back to Org-Mode homepage" href="http://orgmode.org"><img id="logo" src="/img/org-mode-unicorn-logo.png" /></a>
 
 <div id="translate">
-  [ <a title="English version" href="http://orgmode.org/index.html">en</a>
-  - <a title="Version française"
-       href="http://orgmode.org/fr/index.html">fr</a> - <a title="Japanese
-								  version" href="http://orgmode.org/ja/index.html">ja</a> ]
+  [ <a title="English version"   href="/index.html">en</a>
+  - <a title="Version française" href="/fr/index.html">fr</a>
+  - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
 </div>
 
 <div id="orgquote">
-  <script type="text/javascript" src="http://orgmode.org/org-quotes.js"></script>
+  <script type="text/javascript" src="/org-quotes.js"></script>
 </div>
 
 <script type="text/javascript">
@@ -27,8 +26,6 @@
 </script>
 
 <div id="buttons">
-
-  <a target="new" href="http://www.rackspace.com"><img id="rackspace" src="/img/rackspace2.jpg"/></a>
 
   <form id="paypal" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
     <input type="hidden" name="cmd" value="_xclick" />
