Use https instead of http for orgmode.org

--- a/preamble.html
+++ b/preamble.html
@@ -1,7 +1,7 @@
 <link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/js/org.js"></script>
-<a title="Back to Org-Mode homepage" href="http://orgmode.org"><img id="logo" src="/img/org-mode-unicorn-logo.png" /></a>
+<a title="Back to Org-Mode homepage" href="https://orgmode.org"><img id="logo" src="/img/org-mode-unicorn-logo.png" /></a>
 
 <div id="translate">
   [ <a title="English version"   href="/index.html">en</a>
@@ -35,7 +35,7 @@
     <input type="hidden" name="lc" value="GB" />
     <input type="hidden" name="currency_code" value="USD" />
     <input type="hidden" name="tax" value="0" />
-    <input type="hidden" name="return" value="http://orgmode.org" />
+    <input type="hidden" name="return" value="https://orgmode.org" />
     <button name="submit" alt="Support Org-mode" />Support Org</button>
   </form>
 
