--- a/preamble.html
+++ b/preamble.html
@@ -1,4 +1,4 @@
-<link href="http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/js/org.js"></script>
 <a title="Back to Org-Mode homepage" href="https://orgmode.org"><img id="logo" src="/img/org-mode-unicorn-logo.png" /></a>
