Update support button

--- a/preamble.html
+++ b/preamble.html
@@ -28,15 +28,5 @@ fathom('trackPageview');
 </script>
 
 <div id="buttons">
-  <form id="paypal" name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-    <input type="hidden" name="cmd" value="_xclick" />
-    <input type="hidden" name="business" value="bzg@bzg.fr" />
-    <input type="hidden" name="item_name" value="Org mode (Emacs)" />
-    <input type="hidden" name="item_number" value="1" />
-    <input type="hidden" name="lc" value="GB" />
-    <input type="hidden" name="currency_code" value="USD" />
-    <input type="hidden" name="tax" value="0" />
-    <input type="hidden" name="return" value="https://orgmode.org" />
-    <button name="submit" alt="Support Org-mode" />Support Org</button>
-  </form>
+  <p>Support via <br/><a href="https://liberapay.com/bzg" title="Donations always help.">Liberapay</a>, <a href="https://github.com/sponsors/bzg" title="Donations always help.">GitHub</a> or <a href="https://www.paypal.me/bzg" title="Donations always help.">PayPal</a></p>
 </div>
