--- a/preamble.html
+++ b/preamble.html
@@ -28,5 +28,5 @@ fathom('trackPageview');
 </script>
 
 <div id="buttons">
-  <p>Support via <br/><a href="https://liberapay.com/bzg" title="Donations always help.">Liberapay</a>, <a href="https://github.com/sponsors/bzg" title="Donations always help.">GitHub</a> or <a href="https://www.paypal.me/bzg" title="Donations always help.">PayPal</a></p>
+  <p>Support via <br/><a href="https://liberapay.com/bzg" title="Donations always help.">Liberapay</a>, <a href="https://github.com/sponsors/bzg" title="Donations always help.">GitHub</a> or <a href="https://www.paypal.me/bzg/10" title="Donations always help.">PayPal</a></p>
 </div>
