--- a/preamble.html
+++ b/preamble.html
@@ -1,13 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/js/org.js"></script>
-<a title="Back to Org-Mode homepage" href="https://orgmode.org"><img id="logo" src="/img/org-mode-unicorn-logo.png" /></a>
-
-<div id="translate">
-  [ <a title="English version"   href="/index.html">en</a>
-  - <a title="Version française" href="/fr/index.html">fr</a>
-  - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
-</div>
 
 <div id="orgquote">
   <script type="text/javascript" src="/org-quotes.js"></script>
@@ -27,6 +20,20 @@ fathom('set', 'siteId', 'NWSQJ');
 fathom('trackPageview');
 </script>
 
-<div id="buttons">
-  <p>Support via <br/><a href="https://liberapay.com/bzg" title="Donations always help.">Liberapay</a>, <a href="https://github.com/sponsors/bzg" title="Donations always help.">GitHub</a> or <a href="https://www.paypal.me/bzg/10" title="Donations always help.">PayPal</a></p>
-</div>
+<nav id="main">
+    <span id="translate">
+        [ <a title="English version"   href="/index.html">en</a>
+        - <a title="Version française" href="/fr/index.html">fr</a>
+        - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
+    </span>
+    <img src="https://orgmode.org/img/org-mode-unicorn.png" alt="Org-Mode Logo"/>
+    <p>Org Mode</p>
+    <a href="index.html">Home</a>
+    <a href="features.html">Features</a>
+    <a href="Releases.html">Releases</a>
+    <a href="Install.html">Install</a>
+    <a href="Documentation.html">Documentation</a>
+    <a href="contribute.html">Contribute</a>
+    <a title="View Source" class="view-source"
+    href="javascript:show_org_source()">&lt;/&gt;</a>
+</nav>
