--- a/preamble.html
+++ b/preamble.html
@@ -1,10 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/js/org.js"></script>
-
-<div id="orgquote">
-  <script type="text/javascript" src="/org-quotes.js"></script>
-</div>
+<script type="text/javascript" src="/js/org-quotes.js"></script>
 
 <script>
 (function(f, a, t, h, o, m){
