Use svg unicorn in navbar

--- a/preamble.html
+++ b/preamble.html
@@ -23,7 +23,7 @@ fathom('trackPageview');
         - <a title="Version française" href="/fr/index.html">fr</a>
         - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
     </span>
-    <img src="https://orgmode.org/img/org-mode-unicorn.png" alt="Org-Mode Logo"/>
+    <img src="/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/>
     <p>Org Mode</p>
     <a href="index.html">Home</a>
     <a href="features.html">Features</a>
