--- a/preamble.html
+++ b/preamble.html
@@ -1,4 +1,3 @@
-<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Droid+Sans&subset=latin" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="/js/org.js"></script>
 <script type="text/javascript" src="/js/org-quotes.js"></script>
 
@@ -17,13 +16,15 @@ fathom('trackPageview');
 </script>
 
 <nav id="main">
+    <label for="hamburger">&#9776;</label>
+    <input type="checkbox" id="hamburger"/>
+
     <span id="translate">
         [ <a title="English version"   href="/index.html">en</a>
         - <a title="Version française" href="/fr/index.html">fr</a>
         - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
     </span>
-    <img src="/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/>
-    <p>Org Mode</p>
+    <p><img src="/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
     <a href="index.html">Home</a>
     <a href="features.html">Features</a>
     <a href="Releases.html">Releases</a>
