--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="/js/org.js"></script>
-<script type="text/javascript" src="/js/org-quotes.js"></script>
+<script type="text/javascript" src="/resources/js/org.js"></script>
+<script type="text/javascript" src="/resources/js/org-quotes.js"></script>
 
 <script>
  (function(f, a, t, h, o, m){
@@ -24,12 +24,12 @@ fathom('trackPageview');
         - <a title="Version française" href="/fr/index.html">fr</a>
         - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
     </span>
-    <p><img src="/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
+    <p><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
     <a href="index.html">Home</a>
     <a href="features.html">Features</a>
-    <a href="Releases.html">Releases</a>
-    <a href="Install.html">Install</a>
-    <a href="Documentation.html">Documentation</a>
+    <a href="releases.html">Releases</a>
+    <a href="install.html">Install</a>
+    <a href="documentation.html">Documentation</a>
     <a href="contribute.html">Contribute</a>
     <a title="View Source" class="view-source"
     href="javascript:show_org_source()">&lt;/&gt;</a>
