--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -24,8 +24,9 @@ fathom('trackPageview');
         - <a title="Version française" href="/fr/index.html">fr</a>
         - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
     </span>
-    <p><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
-    <a href="index.html">Home</a>
+    <a href="index.html">
+      <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
+    Home</a>
     <a href="features.html">Features</a>
     <a href="releases.html">Releases</a>
     <a href="install.html">Install</a>
