--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="/resources/js/org.js"></script>
-<script type="text/javascript" src="/resources/js/org-quotes.js"></script>
+<script type="text/javascript" async src="/resources/js/org.js"></script>
+<script type="text/javascript" async src="/resources/js/org-quotes.js"></script>
 
 <script>
  (function(f, a, t, h, o, m){
