Change navbar 'Documentation' to 'Manual'

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -30,7 +30,7 @@ fathom('trackPageview');
     <a href="features.html">Features</a>
     <a href="releases.html">Releases</a>
     <a href="install.html">Install</a>
-    <a href="/manual">Documentation</a>
+    <a href="/manual">Manual</a>
     <a href="contribute.html">Contribute</a>
     <a title="View Source" class="view-source"
     href="javascript:show_org_source()">&lt;/&gt;</a>
