Comment out view-source button

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" async src="/resources/js/org.js"></script>
+<!-- <script type="text/javascript" async src="/resources/js/org.js"></script> -->
 <script type="text/javascript" async src="/resources/js/org-quotes.js"></script>
 
 <script>
@@ -32,6 +32,6 @@ fathom('trackPageview');
     <a href="install.html">Install</a>
     <a href="/manual">Manual</a>
     <a href="contribute.html">Contribute</a>
-    <a title="View Source" class="view-source"
-    href="javascript:show_org_source()">&lt;/&gt;</a>
+    <!-- <a title="View Source" class="view-source"
+         href="javascript:show_org_source()">&lt;/&gt;</a> -->
 </nav>
