Navbar: just link to english pages

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -27,11 +27,11 @@ fathom('trackPageview');
     <a href="index.html">
       <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
     Home</a>
-    <a href="features.html">Features</a>
-    <a href="releases.html">Releases</a>
-    <a href="install.html">Install</a>
+    <a href="/features.html">Features</a>
+    <a href="/releases.html">Releases</a>
+    <a href="/install.html">Install</a>
     <a href="/manual">Manual</a>
-    <a href="contribute.html">Contribute</a>
+    <a href="/contribute.html">Contribute</a>
     <!-- <a title="View Source" class="view-source"
          href="javascript:show_org_source()">&lt;/&gt;</a> -->
 </nav>
