Remove link to Japanese translations, not yet done

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -21,8 +21,8 @@ fathom('trackPageview');
 
     <span id="translate">
         [ <a title="English version"   href="/index.html">en</a>
-        - <a title="Version française" href="/fr/index.html">fr</a>
-        - <a title="Japanese version"  href="/ja/index.html">ja</a> ]
+        - <a title="Version française" href="/fr/index.html">fr</a> ]
+        <!-- - <a title="Japanese version"  href="/ja/index.html">ja</a> ] -->
     </span>
     <a href="index.html">
       <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
