Rename releases.org -> Changes.org
To protect external links to this page

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -28,7 +28,7 @@ fathom('trackPageview');
       <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
     Home</a>
     <a href="/features.html">Features</a>
-    <a href="/releases.html">Releases</a>
+    <a href="/Changes.html">Releases</a>
     <a href="/install.html">Install</a>
     <a href="/manual">Manual</a>
     <a href="/contribute.html">Contribute</a>
