Reintroduce a community page and reorganize some stuff there

--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -31,6 +31,7 @@ fathom('trackPageview');
     <a href="/Changes.html">Releases</a>
     <a href="/install.html">Install</a>
     <a href="/manual">Manual</a>
+    <a href="/community.html">Community</a>
     <a href="/contribute.html">Contribute</a>
     <!-- <a title="View Source" class="view-source"
          href="javascript:show_org_source()">&lt;/&gt;</a> -->
