--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -29,6 +29,7 @@ fathom('trackPageview');
     Home</a>
     <a href="/features.html">Features</a>
     <a href="/Changes.html">Releases</a>
+    <a href="https://updates.orgmode.org">Updates</a>
     <a href="/install.html">Install</a>
     <a href="/manual">Manual</a>
     <a href="/community.html">Community</a>
