--- a/resources/preamble.html
+++ b/resources/preamble.html
@@ -24,8 +24,7 @@ fathom('trackPageview');
         <!-- - <a title="Japanese version"  href="/ja/index.html">ja</a> ] -->
     </span>
     <a href="index.html">
-      <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p>
-    Home</a>
+      <p class="logo"><img src="/resources/img/org-mode-unicorn.svg" alt="Org-Mode Logo"/> Org Mode</p></a>
     <a href="/features.html">Features</a>
     <a href="/Changes.html">Releases</a>
     <a href="https://updates.orgmode.org">Updates</a>
