Fix CSS layer/interactivity bug in org demo

--- a/org-demo.html
+++ b/org-demo.html
@@ -6,7 +6,7 @@
 #+date:   <span class="org-document-info">2020-10-27</span>
 </pre>
 <details open><summary>
-<asside class="right">
+<asside class="right" style="position: relative; z-index: -1">
     <h4>Outlining</h4>
     Headlines and folding make structured editing a breeze.
     Plain text makes it easy to sync and version control Org files.
