org-demo.html: Update wording

--- a/org-demo.html
+++ b/org-demo.html
@@ -22,7 +22,7 @@
       Filter content, and update it in place.
     </asside>
     <pre>
-      The <i>/beauty/</i> of org <b>*must*</b> be shared.
+  The <i>/beauty/</i> of org <b>*must*</b> be shared.
     </pre>
     <details class="replace">
       <summary>
@@ -36,10 +36,12 @@
       <summary>
 	<pre>
 	  <span class="org-level-2">** <span class="org-done">DONE Make screenshots</span></span>
+
 	</pre>
       </summary>
       <pre>
 	<span class="org-special-keyword">CLOSED:</span> <span class="org-date">[2020-09-03 Thu 18:24]</span>
+
       </pre>
     </details>
     <details open>
@@ -79,16 +81,15 @@
   <details open class="label-left">
     <summary>
       <asside class="label-left">Prose</asside>
-      <pre><span class="org-level-1">* Update Manual</span></pre>
+      <pre><span class="org-level-1">* Learn Org</span></pre>
     </summary>
     <pre>
-      We should provide a simpler experience for new users.
-      Org has a lot to offer, so it's worth making it easy for a
-      newcommer to get started and discover the possibilities in Org.
-      A clear introduction to the basics could go a long way.
-      Hopefully the new "Quickstart" page will complement the manual
-      well in this regard.
-      help with that.
+  Org makes easy things easy and complex things possible.
+
+  You don't need to learn Org before using Org: read the quickstart
+  page and you should be good to go.  If you need more, Org will be
+  here for you as well: dive into the manual and join the community!
+
     </pre>
     <details open>
       <summary>
